Fixing that dropdown doesn't fit for middle-sized screens. code block text-color

--- a/_sass/minima/_base.scss
+++ b/_sass/minima/_base.scss
@@ -148,7 +148,7 @@ code {
   @include relative-font-size(0.9375);
   border: 1px solid $grey-color-light;
   border-radius: 3px;
-  background-color: #eef;
+//  background-color: #eef;
 }
 
 code {
